Fixed address word wrap

--- a/app/styles/map.less
+++ b/app/styles/map.less
@@ -36,7 +36,6 @@
             font-size:1.2em;
             line-height:1.1em;
             font-family: @headings-font-family;
-            white-space: nowrap;
         }
     }
 }
